--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.2",
-    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "body-parser": "^1.20.1",
+    "mongoose": "^8.8.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.1"
   },
