--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
